14:53 Версия поддерживающая работу в фоновом режиме (чистая от разработчиков)

--- a/index.html
+++ b/index.html
@@ -255,5 +255,6 @@
 <script src="src/js/wifi/wifi.js"></script>
 <script src="src/js/info/statistics.js"></script>
 <script src="src/js/info/human_activity.js"></script>
+<script src="src/js/system/background.js"></script>
 </body>
 </html>
